[package]
name = "svt-crawler"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "^3", features = ["derive"] }
lazy_static = "^1"
reqwest = { version = "^0.11", features = ["blocking", "json"] }
serde = { version = "*", features = ["derive"] }
serde_json = "*"
